RESOLVED FIXED196345
WebKitTestRunner crashes when running pointerevents/ios/touch-action-none-in-overflow-scrolling-touch.html
https://bugs.webkit.org/show_bug.cgi?id=196345
Summary WebKitTestRunner crashes when running pointerevents/ios/touch-action-none-in-...
Antoine Quint
Reported 2019-03-28 04:02:50 PDT
We hit this assertion in WTF/OptionSet.h: ASSERT_WITH_MESSAGE(hasOneBitSet(static_cast<StorageType>(option)), "Enumerator is not a positive power of two.").
Attachments
Patch (1.50 KB, patch)
2019-03-28 04:04 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews100 for mac-highsierra (2.43 MB, application/zip)
2019-03-28 11:34 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-highsierra-wk2 (2.75 MB, application/zip)
2019-03-28 11:48 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-highsierra (2.24 MB, application/zip)
2019-03-28 12:17 PDT, EWS Watchlist
no flags
Patch (2.18 KB, patch)
2019-03-29 08:32 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-03-28 04:04:39 PDT
EWS Watchlist
Comment 2 2019-03-28 11:34:19 PDT
Comment on attachment 366163 [details] Patch Attachment 366163 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/11692682 New failing tests: imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_touch-action-verification.html
EWS Watchlist
Comment 3 2019-03-28 11:34:20 PDT
Created attachment 366188 [details] Archive of layout-test-results from ews100 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4 2019-03-28 11:48:12 PDT
Comment on attachment 366163 [details] Patch Attachment 366163 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/11692729 New failing tests: imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_touch-action-verification.html
EWS Watchlist
Comment 5 2019-03-28 11:48:14 PDT
Created attachment 366191 [details] Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6 2019-03-28 12:17:38 PDT
Comment on attachment 366163 [details] Patch Attachment 366163 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/11692857 New failing tests: imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_touch-action-verification.html
EWS Watchlist
Comment 7 2019-03-28 12:17:39 PDT
Created attachment 366193 [details] Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
Antoine Quint
Comment 8 2019-03-29 08:32:25 PDT
WebKit Commit Bot
Comment 9 2019-03-29 10:44:20 PDT
Comment on attachment 366272 [details] Patch Clearing flags on attachment: 366272 Committed r243648: <https://trac.webkit.org/changeset/243648>
WebKit Commit Bot
Comment 10 2019-03-29 10:44:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2019-03-29 10:45:22 PDT
Note You need to log in before you can comment on or make changes to this bug.