WebKitTestRunner crashes when running pointerevents/ios/touch-action-none-in-overflow-scrolling-touch.html https://bugs.webkit.org/show_bug.cgi?id=196345

Patch by Antoine Quint <graouts@apple.com> on 2019-03-29
Reviewed by Dean Jackson.

An enum used within a WTF::OptionSet needs to have only power-of-two values that are larger than 0.

* platform/TouchAction.h:
* rendering/style/StyleRareNonInheritedData.h:

Canonical link: https://commits.webkit.org/210668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243648 268f45cc-cd09-0410-ab3c-d52691b4dbfc